{
  "version": 4,
  "terraform_version": "1.13.1",
  "serial": 5,
  "lineage": "fe6f7fa6-85c0-86aa-2ad0-6355c16b3c07",
  "resources": [
    {
      "module": "module.ec2_instance",
      "mode": "data",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:380414078618:subnet/subnet-06b04b99f63f84d58",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "available_ip_address_count": 4091,
            "cidr_block": "172.31.32.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06b04b99f63f84d58",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "380414078618",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "state": "available",
            "vpc_id": "vpc-0de8e9e5d92679267"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-02d26659fd82cf299",
            "arn": "arn:aws:ec2:ap-south-1:380414078618:instance/i-0ede594c890f04578",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ede594c890f04578",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "keys_23",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0ead405267138cc00"
              }
            ],
            "primary_network_interface_id": "eni-0ead405267138cc00",
            "private_dns": "ip-172-31-38-68.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.38.68",
            "public_dns": "ec2-13-233-90-159.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.233.90.159",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02c6c05fca3dd702c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "single-instance-20250925172354450200000001"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06b04b99f63f84d58",
            "tags": {
              "Environment": "dev",
              "Name": "single-instance",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "single-instance",
              "Terraform": "true"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Environment": "dev",
              "Name": "single-instance",
              "Terraform": "true"
            },
            "vpc_security_group_ids": [
              "sg-0aaff27c2d6d0906a"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "380414078618",
            "id": "i-0ede594c890f04578",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.ec2_instance.aws_iam_instance_profile.this",
            "module.ec2_instance.aws_iam_role.this",
            "module.ec2_instance.aws_security_group.this",
            "module.ec2_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_instance.data.aws_partition.current",
            "module.ec2_instance.data.aws_ssm_parameter.this",
            "module.ec2_instance.data.aws_subnet.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:380414078618:security-group/sg-0aaff27c2d6d0906a",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0aaff27c2d6d0906a",
            "ingress": [],
            "name": "single-instance-20250925172354450200000001",
            "name_prefix": "single-instance-",
            "owner_id": "380414078618",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "single-instance",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "single-instance",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0de8e9e5d92679267"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "380414078618",
            "id": "sg-0aaff27c2d6d0906a",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.ec2_instance.data.aws_subnet.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ipv4_default",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:380414078618:security-group-rule/sgr-019956b3e32485697",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all IPv4 traffic",
            "from_port": null,
            "id": "sgr-019956b3e32485697",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0aaff27c2d6d0906a",
            "security_group_rule_id": "sgr-019956b3e32485697",
            "tags": {
              "Environment": "dev",
              "Name": "single-instance-ipv4_default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "single-instance-ipv4_default",
              "Terraform": "true"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "380414078618",
            "id": "sgr-019956b3e32485697",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.ec2_instance.aws_security_group.this",
            "module.ec2_instance.data.aws_subnet.this"
          ]
        },
        {
          "index_key": "ipv6_default",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:380414078618:security-group-rule/sgr-09e24d4724e407cd9",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": "Allow all IPv6 traffic",
            "from_port": null,
            "id": "sgr-09e24d4724e407cd9",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0aaff27c2d6d0906a",
            "security_group_rule_id": "sgr-09e24d4724e407cd9",
            "tags": {
              "Environment": "dev",
              "Name": "single-instance-ipv6_default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "single-instance-ipv6_default",
              "Terraform": "true"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "380414078618",
            "id": "sgr-09e24d4724e407cd9",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.ec2_instance.aws_security_group.this",
            "module.ec2_instance.data.aws_subnet.this"
          ]
        }
      ]
    }
  ]
}